<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Dialog_Einstellung_pfade</class>
 <widget class="QDialog" name="Dialog_Einstellung_pfade">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>823</width>
    <height>246</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Einstellung Pfade</string>
  </property>
  <property name="modal">
   <bool>true</bool>
  </property>
  <widget class="QWidget" name="layoutWidget">
   <property name="geometry">
    <rect>
     <x>20</x>
     <y>20</y>
     <width>791</width>
     <height>181</height>
    </rect>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="3" column="1">
     <widget class="QLineEdit" name="lineEdit_root_ganx"/>
    </item>
    <item row="1" column="0">
     <widget class="QLabel" name="label_2">
      <property name="text">
       <string>Zielverzeichnis Server</string>
      </property>
     </widget>
    </item>
    <item row="4" column="0">
     <widget class="QLabel" name="label_5">
      <property name="text">
       <string>Wurzelverzeichniss fmc</string>
      </property>
     </widget>
    </item>
    <item row="1" column="1">
     <widget class="QLineEdit" name="lineEdit_ziel_server"/>
    </item>
    <item row="3" column="2">
     <widget class="QPushButton" name="pushButton_root_ganx">
      <property name="text">
       <string>...</string>
      </property>
     </widget>
    </item>
    <item row="0" column="0">
     <widget class="QLabel" name="label">
      <property name="text">
       <string>Quellverzeichnis</string>
      </property>
     </widget>
    </item>
    <item row="4" column="2">
     <widget class="QPushButton" name="pushButton_root_fmc">
      <property name="text">
       <string>...</string>
      </property>
     </widget>
    </item>
    <item row="0" column="1">
     <widget class="QLineEdit" name="lineEdit_quelle"/>
    </item>
    <item row="1" column="2">
     <widget class="QPushButton" name="pushButton_ziel_server">
      <property name="text">
       <string>...</string>
      </property>
     </widget>
    </item>
    <item row="3" column="0">
     <widget class="QLabel" name="label_4">
      <property name="text">
       <string>Wurzelverzeichnis ganx</string>
      </property>
     </widget>
    </item>
    <item row="2" column="1">
     <widget class="QLineEdit" name="lineEdit_ziel_lokal"/>
    </item>
    <item row="2" column="0">
     <widget class="QLabel" name="label_3">
      <property name="text">
       <string>Zielverzeichnis lokal</string>
      </property>
     </widget>
    </item>
    <item row="2" column="2">
     <widget class="QPushButton" name="pushButton_ziel_lokal">
      <property name="text">
       <string>...</string>
      </property>
     </widget>
    </item>
    <item row="4" column="1">
     <widget class="QLineEdit" name="lineEdit_root_fmc"/>
    </item>
    <item row="0" column="2">
     <widget class="QPushButton" name="pushButton_quelle">
      <property name="text">
       <string>...</string>
      </property>
     </widget>
    </item>
    <item row="5" column="0">
     <widget class="QLabel" name="label_6">
      <property name="text">
       <string>Wurzelverzeichniss cix</string>
      </property>
     </widget>
    </item>
    <item row="5" column="1">
     <widget class="QLineEdit" name="lineEdit_root_cix"/>
    </item>
    <item row="5" column="2">
     <widget class="QPushButton" name="pushButton_root_cix">
      <property name="text">
       <string>...</string>
      </property>
     </widget>
    </item>
   </layout>
  </widget>
  <widget class="QWidget" name="layoutWidget">
   <property name="geometry">
    <rect>
     <x>260</x>
     <y>210</y>
     <width>261</width>
     <height>25</height>
    </rect>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
    <item>
     <widget class="QPushButton" name="pushButton_ok">
      <property name="text">
       <string>OK</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QPushButton" name="pushButton_abbrechen">
      <property name="text">
       <string>Abbrechen</string>
      </property>
     </widget>
    </item>
   </layout>
  </widget>
 </widget>
 <tabstops>
  <tabstop>lineEdit_quelle</tabstop>
  <tabstop>lineEdit_ziel_server</tabstop>
  <tabstop>lineEdit_ziel_lokal</tabstop>
  <tabstop>lineEdit_root_ganx</tabstop>
  <tabstop>lineEdit_root_fmc</tabstop>
  <tabstop>pushButton_ok</tabstop>
  <tabstop>pushButton_abbrechen</tabstop>
  <tabstop>pushButton_quelle</tabstop>
  <tabstop>pushButton_ziel_server</tabstop>
  <tabstop>pushButton_ziel_lokal</tabstop>
  <tabstop>pushButton_root_ganx</tabstop>
  <tabstop>pushButton_root_fmc</tabstop>
 </tabstops>
 <resources/>
 <connections/>
</ui>
